refactor events a bit + mouse buttons work now